# terra-bridge

./: .gitignore  Cargo.toml
examples/: schema.rs
schema/: admins_response.json  collection_mapping_response.json  execute_msg.json  history_response.json  instantiate_msg.json  operators_response.json  query_msg.json
src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs  test.rs  utils.rs
