[package]
name = "terra-bridge"
version = "0.1.0"
authors = ["HankBreck"]
edition = "2021"
exclude = [
    "contract.wasm",
    "artifacts/*"
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
          --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
            --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
              cosmwasm/rust-optimizer:0.12.5"""

[dependencies]
cw0 = "0.9.1"
cw2 = "0.9.1"
cw721 = { version = "0.9.2" }
cw-storage-plus = "0.9.1"
cosmwasm-std = "0.16.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde-json-wasm="0.3.1"
thiserror =  "1.0.23"
sha2 = "0.8.0"
base64="0.13.0"
protobuf = { version = "2", features = ["with-bytes"] }

[dev-dependencies]
cosmwasm-schema =  "0.16.0"
