[package]
name = "terra-bridge"
version = "0.1.0"
authors = ["HankBreck"]
edition = "2021"
exclude = [
    "contract.wasm",
    "artifacts/*"
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
          --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
            --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
              cosmwasm/rust-optimizer:0.12.6"""

[dependencies]
cw721 = { version = "0.9.2" }
cw-storage-plus = "0.9.1"
cosmwasm-std = "0.16.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror =  "1.0.23"
sha2 = "0.8.0"
base64="0.13.0"
bincode2 = "2.0.1"

[dev-dependencies]
cosmwasm-schema =  "0.16.0"
